<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FamilyTask</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- REGISTER -->
    <string name="register_username">Username</string>
    <string name="register_pass">Password</string>
    <string name="register_confpass">Confirm Password</string>
    <string name="register_email">Email</string>
    <string name="register">Register</string>
    <string name="new_user">New User</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="font">fonts/title.ttf</string>

</resources>
