<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bad_blue"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    tools:context=".com.pahanez.familytask.fragments.Register">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/reg_username"
            android:layout_width="@dimen/dp200"
            android:layout_height="wrap_content"
            android:hint="@string/register_username" />
        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/reg_email"
            android:layout_width="@dimen/dp200"
            android:layout_height="wrap_content"
            android:hint="@string/register_email" />
        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/reg_pass"
            android:layout_width="@dimen/dp200"
            android:layout_height="wrap_content"
            android:hint="@string/register_pass" />
        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/reg_confpass"
            android:layout_width="@dimen/dp200"
            android:layout_height="wrap_content"
            android:hint="@string/register_confpass" />

        <info.hoang8f.widget.FButton
            android:layout_width="200dp"
            android:id="@+id/reg_register"
            android:layout_centerInParent="true"
            android:text="@string/register"
            fbutton:buttonColor="@color/fbutton_color_peter_river"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            android:textColor="@android:color/white"
            fbutton:cornerRadius="5dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
